[workspace]
members = [
    "caffe2-blob",
    #"caffe2-aten",
    "caffe2-c10",
    "caffe2-common",
    "caffe2-cfg",
    "caffe2-context",
    "caffe2-db",
    "caffe2-derive",
    "caffe2-env",
    "caffe2-event",
    "caffe2-export",
    "caffe2-graph",
    "caffe2-histogram",
    "caffe2-ideep",
    "caffe2-image",
    "caffe2-imports",
    "caffe2-init",
    "caffe2-math",
    "caffe2-mem",
    "caffe2-miopen",
    "caffe2-module",
    "caffe2-nomnigraph",
    "caffe2-operator",
    "caffe2-opt",
    "caffe2-output",
    "caffe2-perfkernels",
    "caffe2-plan",
    "caffe2-predictor",
    "caffe2-prof",
    "caffe2-proto",
    "caffe2-qtensor",
    "caffe2-quant",
    "caffe2-queue",
    "caffe2-random",
    "caffe2-register",
    "caffe2-registry",
    "caffe2-serde",
    "caffe2-serverquantize",
    "caffe2-sgd",
    "caffe2-stats",
    "caffe2-store",
    "caffe2-system",
    "caffe2-tensor",
    "caffe2-test",
    "caffe2-threadpool",
    "caffe2-timer",
    "caffe2-trace",
    "caffe2-traits",
    "caffe2-transform",
    "caffe2-txform",
    "caffe2-types",
    "caffe2-util",
    "caffe2-version",
    "caffe2-video",
    "caffe2op-abs",
    "caffe2op-accum",
    "caffe2op-accuracy",
    "caffe2op-acos",
    "caffe2op-activation",
    "caffe2op-affine",
    "caffe2op-alias",
    "caffe2op-apmeter",
    "caffe2op-args",
    "caffe2op-asin",
    "caffe2op-assert",
    "caffe2op-asyncnet",
    "caffe2op-atan",
    "caffe2op-atomics",
    "caffe2op-batch",
    "caffe2op-bbox",
    "caffe2op-bisect",
    "caffe2op-bucketize",
    "caffe2op-cast",
    "caffe2op-cbrt",
    "caffe2op-ceil",
    "caffe2op-channelbackprop",
    "caffe2op-channelshuffle",
    "caffe2op-channelstats",
    "caffe2op-clip",
    "caffe2op-collect",
    "caffe2op-communicator",
    "caffe2op-concatsplit",
    "caffe2op-conditional",
    "caffe2op-conv",
    "caffe2op-copy",
    "caffe2op-cos",
    "caffe2op-cosh",
    "caffe2op-counter",
    "caffe2op-couple",
    "caffe2op-crash",
    "caffe2op-crfviterbi",
    "caffe2op-crossentropy",
    "caffe2op-ctc",
    "caffe2op-cube",
    "caffe2op-dataset",
    "caffe2op-deform",
    "caffe2op-densevec",
    "caffe2op-dequant",
    "caffe2op-distance",
    "caffe2op-do",
    "caffe2op-dropout",
    "caffe2op-elementwise",
    "caffe2op-elu",
    "caffe2op-enforce",
    "caffe2op-erf",
    "caffe2op-exp",
    "caffe2op-expand",
    "caffe2op-fallbackgpu",
    "caffe2op-featuremaps",
    "caffe2op-feed",
    "caffe2op-filler",
    "caffe2op-find",
    "caffe2op-flatten",
    "caffe2op-floor",
    "caffe2op-free",
    "caffe2op-fullyconnected",
    "caffe2op-fusedrowwise",
    "caffe2op-gather",
    "caffe2op-gelu",
    "caffe2op-generateproposals",
    "caffe2op-glu",
    "caffe2op-groupnorm",
    "caffe2op-gru",
    "caffe2op-halffloat",
    "caffe2op-hardsigmoid",
    "caffe2op-heatmap",
    "caffe2op-histogram",
    "caffe2op-hsoftmax",
    "caffe2op-i8quantized",
    "caffe2op-if",
    "caffe2op-im2col",
    "caffe2op-index",
    "caffe2op-indexhash",
    "caffe2op-instancenorm",
    "caffe2op-integralimage",
    "caffe2op-isempty",
    "caffe2op-jsd",
    "caffe2op-keysplit",
    "caffe2op-lastnwindow",
    "caffe2op-layernorm",
    "caffe2op-leakyrelu",
    "caffe2op-lengthspad",
    "caffe2op-lengthsplit",
    "caffe2op-lengthsreduce",
    "caffe2op-lengthstile",
    "caffe2op-lengthstop",
    "caffe2op-listwisel2r",
    "caffe2op-loadsave",
    "caffe2op-locallyconnected",
    "caffe2op-localresponsenormalization",
    "caffe2op-log",
    "caffe2op-logit",
    "caffe2op-loss",
    "caffe2op-lpnorm",
    "caffe2op-lppool",
    "caffe2op-lstm",
    "caffe2op-map",
    "caffe2op-marginrank",
    "caffe2op-mask",
    "caffe2op-matmul",
    "caffe2op-mean",
    "caffe2op-mergeid",
    "caffe2op-minmax",
    "caffe2op-mish",
    "caffe2op-mod",
    "caffe2op-moments",
    "caffe2op-multiclass",
    "caffe2op-nanreplace",
    "caffe2op-negative",
    "caffe2op-ngram",
    "caffe2op-nmsbox",
    "caffe2op-normalize",
    "caffe2op-numpytile",
    "caffe2op-onehot",
    "caffe2op-onnxwhile",
    "caffe2op-orderswitch",
    "caffe2op-packrnnseq",
    "caffe2op-packsegments",
    "caffe2op-pad",
    "caffe2op-partition",
    "caffe2op-percentile",
    "caffe2op-perplexity",
    "caffe2op-plt",
    "caffe2op-pool",
    "caffe2op-pow",
    "caffe2op-prefetch",
    "caffe2op-prelu",
    "caffe2op-prepend",
    "caffe2op-quantdecode",
    "caffe2op-quantile",
    "caffe2op-rankloss",
    "caffe2op-reciprocal",
    "caffe2op-reduce",
    "caffe2op-relu",
    "caffe2op-remove",
    "caffe2op-reservoir",
    "caffe2op-reshape",
    "caffe2op-resize",
    "caffe2op-reversepacked",
    "caffe2op-rmac",
    "caffe2op-rms",
    "caffe2op-rnn",
    "caffe2op-roialign",
    "caffe2op-roipool",
    "caffe2op-rowmul",
    "caffe2op-rsqrt",
    "caffe2op-scale",
    "caffe2op-scope",
    "caffe2op-segmentreduction",
    "caffe2op-selfbinning",
    "caffe2op-selu",
    "caffe2op-sequence",
    "caffe2op-shape",
    "caffe2op-sigmoid",
    "caffe2op-sin",
    "caffe2op-slice",
    "caffe2op-softmax",
    "caffe2op-softplus",
    "caffe2op-softsign",
    "caffe2op-spacebatch",
    "caffe2op-sparsedropout",
    "caffe2op-sparselpreg",
    "caffe2op-sparsenormalize",
    "caffe2op-sparsetodense",
    "caffe2op-spatialbatchnorm",
    "caffe2op-spatialsoftmax",
    "caffe2op-sqr",
    "caffe2op-sqrt",
    "caffe2op-stats",
    "caffe2op-stopgradient",
    "caffe2op-string",
    "caffe2op-stump",
    "caffe2op-stylizer",
    "caffe2op-summarize",
    "caffe2op-swish",
    "caffe2op-tan",
    "caffe2op-tensorprotos",
    "caffe2op-textfile",
    "caffe2op-thresholdedrelu",
    "caffe2op-tile",
    "caffe2op-topk",
    "caffe2op-transpose",
    "caffe2op-tt",
    "caffe2op-unique",
    "caffe2op-unsafecoalesce",
    "caffe2op-upsample",
    "caffe2op-utility",
    "caffe2op-variablepad",
    "caffe2op-weightedmultisample",
    "caffe2op-weightedsample",
    "caffe2op-while",
    "caffe2op-zerog",
]
