[dependencies.caffe2-db]
path = "../caffe2-db"
#[dependencies.caffe2-aten]
#path = "../caffe2-aten"
[dependencies.caffe2-c10]
path = "../caffe2-c10"
[dependencies.caffe2-common]
path = "../caffe2-common"
[dependencies.caffe2-imports]
path = "../caffe2-imports"
[dependencies.caffe2-serde]
path = "../caffe2-serde"
[dependencies.caffe2-tensor]
path = "../caffe2-tensor"
[dependencies.caffe2-util]
path = "../caffe2-util"
[package]
edition = "2021"
name = "caffe2-blob"
version = "0.1.0"
