[dependencies.caffe2-event]
path = "../caffe2-event"
#[dependencies.caffe2-aten]
#path = "../caffe2-aten"
[dependencies.caffe2-c10]
path = "../caffe2-c10"
[dependencies.caffe2-imports]
path = "../caffe2-imports"
[dependencies.caffe2-util]
path = "../caffe2-util"
[dependencies.caffe2-version]
path = "../caffe2-version"
[package]
edition = "2021"
name = "caffe2-context"
version = "0.1.1-alpha.0"
