[dependencies.caffe2-context]
path = "../caffe2-context"
[dependencies.caffe2-c10]
path = "../caffe2-c10"
[dependencies.caffe2-math]
path = "../caffe2-math"
[dependencies.caffe2-imports]
path = "../caffe2-imports"
[dependencies.caffe2-operator]
path = "../caffe2-operator"
[dependencies.caffe2-quant]
path = "../caffe2-quant"
[dependencies.caffe2-tensor]
path = "../caffe2-tensor"
[dependencies.caffe2-types]
path = "../caffe2-types"
[dependencies.caffe2-util]
path = "../caffe2-util"
[dependencies.caffe2op-batch]
path = "../caffe2op-batch"
[dependencies.caffe2op-channelshuffle]
path = "../caffe2op-channelshuffle"
[dependencies.caffe2op-concatsplit]
path = "../caffe2op-concatsplit"
[dependencies.caffe2op-conv]
path = "../caffe2op-conv"
[dependencies.caffe2op-copy]
path = "../caffe2op-copy"
[dependencies.caffe2op-elementwise]
path = "../caffe2op-elementwise"
[dependencies.caffe2op-fullyconnected]
path = "../caffe2op-fullyconnected"
[dependencies.caffe2op-gather]
path = "../caffe2op-gather"
[dependencies.caffe2op-groupnorm]
path = "../caffe2op-groupnorm"
[dependencies.caffe2op-lstm]
path = "../caffe2op-lstm"
[dependencies.caffe2op-pool]
path = "../caffe2op-pool"
[dependencies.caffe2op-pow]
path = "../caffe2op-pow"
[dependencies.caffe2op-resize]
path = "../caffe2op-resize"
[dependencies.caffe2op-spatialbatchnorm]
path = "../caffe2op-spatialbatchnorm"
[dependencies.caffe2op-utility]
path = "../caffe2op-utility"
[package]
edition = "2021"
name = "caffe2-serverquantize"
version = "0.1.0"
