[dependencies.caffe2-context]
path = "../caffe2-context"
[dependencies.caffe2-imports]
path = "../caffe2-imports"
[dependencies.caffe2-init]
path = "../caffe2-init"
[dependencies.caffe2-tensor]
path = "../caffe2-tensor"
[dependencies.caffe2-types]
path = "../caffe2-types"
[dependencies.caffe2-util]
path = "../caffe2-util"
[package]
edition = "2021"
name = "caffe2-threadpool"
version = "0.1.1-alpha.0"
