[dependencies.caffe2-context]
path = "../caffe2-context"
[dependencies.caffe2-threadpool]
path = "../caffe2-threadpool"
[dependencies.caffe2-imports]
path = "../caffe2-imports"
[dependencies.caffe2-operator]
path = "../caffe2-operator"
[dependencies.caffe2-tensor]
path = "../caffe2-tensor"
[dependencies.caffe2-types]
path = "../caffe2-types"
[dependencies.caffe2-util]
path = "../caffe2-util"
[dependencies.caffe2-version]
path = "../caffe2-version"
[package]
edition = "2021"
name = "caffe2op-conv"
version = "0.1.0"
