[dependencies.caffe2-context]
path = "../caffe2-context"
[dependencies.caffe2-imports]
path = "../caffe2-imports"
[dependencies.caffe2-operator]
path = "../caffe2-operator"
[dependencies.caffe2op-activation]
path = "../caffe2op-activation"
[package]
edition = "2021"
name = "caffe2op-elu"
version = "0.1.0"