[dependencies.caffe2-blob]
path = "../caffe2-blob"
[dependencies.caffe2-context]
path = "../caffe2-context"
[dependencies.caffe2-imports]
path = "../caffe2-imports"
[dependencies.caffe2-operator]
path = "../caffe2-operator"
[dependencies.caffe2-serde]
path = "../caffe2-serde"
[dependencies.caffe2-tensor]
path = "../caffe2-tensor"
[dependencies.caffe2-util]
path = "../caffe2-util"
[package]
edition = "2021"
name = "caffe2op-index"
version = "0.1.0"