[dependencies.caffe2-context]
path = "../caffe2-context"
[dependencies.caffe2-imports]
path = "../caffe2-imports"
[dependencies.caffe2-operator]
path = "../caffe2-operator"
[dependencies.caffe2-tensor]
path = "../caffe2-tensor"
[dependencies.caffe2op-reduce]
path = "../caffe2op-reduce"
[package]
edition = "2021"
name = "caffe2op-segmentreduction"
version = "0.1.0"