[dependencies.caffe2-blob]
path = "../caffe2-blob"
[dependencies.caffe2-util]
path = "../caffe2-util"
[dependencies.caffe2-context]
path = "../caffe2-context"
[dependencies.caffe2-imports]
path = "../caffe2-imports"
[dependencies.caffe2-operator]
path = "../caffe2-operator"
[dependencies.caffe2-tensor]
path = "../caffe2-tensor"
[dependencies.caffe2op-elementwise]
path = "../caffe2op-elementwise"
[package]
edition = "2021"
name = "caffe2op-string"
version = "0.1.0"
